@@ -1,9 +1,5 @@
-# New ports collection Makefile for: deviceAdvDetail
-# Date created:    11 May 2011
-# Whom:      Zenoss <zenoss@experts-exchange.com>
-#
+# Created by: Zenoss <zenoss@experts-exchange.com>
 # $FreeBSD$
-#
 
 PORTNAME=	deviceAdvDetail
 PORTVERSION=	2.7.3
@@ -16,6 +12,7 @@ COMMENT=	Provides additional hardware details for Zenoss
 
 PLIST_FILES=	zenoss/ZenPack/${ZPACK}
 PLIST_DIRS=	zenoss/ZenPack
+USES=		zenoss
 
 ZPACKGROUP=	community
 WRKSRC=	${WRKDIR}/epuzanov-${ZPACKPREFIX}${PORTNAME}-cfbd596
@@ -23,6 +20,4 @@ WRKSRC=	${WRKDIR}/epuzanov-${ZPACKPREFIX}${PORTNAME}-cfbd596
 ZPACK=	${ZPACKPREFIX}${PORTNAME}-2.7-${PYTHON_VERSION:S/thon//}.egg
 ZPACKPREFIX=	ZenPacks.community.
 
-.include <bsd.port.pre.mk>
-.include "${PORTSDIR}/Mk/bsd.zenoss.mk"
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
