@@ -1,9 +1,5 @@
-# New ports collection makefile for: ShowGraphPortlet
-# Date created:    12 May 2011
-# Whom:      Zenoss <zenoss@experts-exchange.com>
-#
+# Created by: Zenoss <zenoss@experts-exchange.com>
 # $FreeBSD$
-#
 
 PORTNAME=	ShowGraphPortlet
 PORTVERSION=	1.03
@@ -16,12 +12,11 @@ COMMENT=	Enables users to show any graph/multi graph reports on their dashboard
 
 PLIST_FILES=	zenoss/ZenPack/${ZPACK}
 PLIST_DIRS=	zenoss/ZenPack
+USES=		zenoss
 
 ZPACKGROUP=	community
 ZPACKPREFIX=	ZenPacks.SCC.
 WRKSRC=         ${WRKDIR}/zenoss-${ZPACKPREFIX}${PORTNAME}-${TAG}
 TAG=            0cf7678
 
-.include <bsd.port.pre.mk>
-.include "${PORTSDIR}/Mk/bsd.zenoss.mk"
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
