@@ -1,9 +1,5 @@
-# New ports collection makefile for: MACReport
-# Date created:    13 May 2011
-# Whom:      Zenoss <zenoss@experts-exchange.com>
-#
+# Created by: Zenoss <zenoss@experts-exchange.com>
 # $FreeBSD$
-#
 
 PORTNAME=	MACReport
 PORTVERSION=	1.0.1
@@ -16,6 +12,7 @@ COMMENT=	Lists MAC address and the Device and Interface associated info
 
 PLIST_FILES=	zenoss/ZenPack/${ZPACK}
 PLIST_DIRS=	zenoss/ZenPack
+USES=		zenoss
 
 USE_ZIP=	yes
 ZPACKGROUP=	community
@@ -24,6 +21,4 @@ TAG=	b345f53
 
 ZPACKPREFIX=	ZenPacks.sodonnell.
 
-.include <bsd.port.pre.mk>
-.include "${PORTSDIR}/Mk/bsd.zenoss.mk"
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
